# src/main/java/com/zatec/zatecbackendservice/enums/APIType.java
@@ -1,0 +1,18 @@
+package com.zatec.zatecbackendservice.enums;
+
+public enum APIType {
+
+    CHUCK_API("https://api.chucknorris.io/jokes/"),
+
+    SWAPI_API("https://swapi.dev/api/people/");
+
+    final String url;
+
+    APIType(String url) {
+        this.url = url;
+    }
+
+    public String getUrl() {
+        return url;
+    }
+}
